--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The backend for MYCON project",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed-test": "psql -f ./seed/seed.test.sql"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,8 @@
   },
   "homepage": "https://github.com/MYCON-Group/backend-MYCON#readme",
   "dependencies": {
-    "express": "^4.16.3"
+    "db": "^1.0.7",
+    "express": "^4.16.3",
+    "pgpromise": "^0.1.1"
   }
 }
