--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The backend for MYCON project",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run seed-test && mocha spec --exit",
     "seed-test": "psql -f ./seed/seed.test.sql"
   },
   "repository": {
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/MYCON-Group/backend-MYCON#readme",
   "dependencies": {
+    "chai": "^4.2.0",
     "db": "^1.0.7",
     "express": "^4.16.3",
-    "pgpromise": "^0.1.1"
+    "pg-promise": "^8.4.6",
+    "pgpromise": "^0.1.1",
+    "supertest": "^3.3.0"
   }
 }
