--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chai": "^4.2.0",
     "db": "^1.0.7",
     "express": "^4.16.3",
+    "lodash": "^4.17.11",
     "pg-promise": "^8.4.6",
     "pgpromise": "^0.1.1",
     "supertest": "^3.3.0"
