added new endpoints for updating locations

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "db": "^1.0.7",
     "express": "^4.16.3",
     "lodash": "^4.17.11",
+    "mocha": "^5.2.0",
     "nodemon": "^1.18.4",
     "pg-promise": "^8.4.6",
     "pgpromise": "^0.1.1",
